client/src/components/main/answerPage/questionBody/index.css
.questionBody {
  display: flex;
  flex-direction: row;
  /* justify-content: space-between;  */
  margin-top: 5%;
  border-bottom: #000000 1px dashed;
}

.answer_question_view {
  width: 15%;
}

.answer_question_text {
  width: 60%;
}

.answer_question_right {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.answer_question_right .profile-pic-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 56px;
  width: auto;
  margin-right: 16px;
}

.askedByText {
  display: inline-block;
}

